# DGF-SDK

./: CMakeLists.txt  LICENSE.md  README.md
DGFBaker/: CMakeLists.txt
DGFBaker/include/: DGFBaker.h
DGFBaker/source/: AdjacencyGraph.h  Cluster.h  ClusterBuilder.cpp  ClusterBuilder.h  DGFBaker.cpp  DebugOutput.cpp  DebugOutput.h  HPG24BlockPacker.cpp  HPG24BlockPacker.h  MaterialCompression.h  Quantization.cpp  Quantization.h  SAHBlockPacker.cpp  SAHBlockPacker.h  SIMD.h  StripGeneration.cpp  StripGeneration.h  Utils.h
DGFLib/: CMakeLists.txt  DGF.cpp  DGF.h
DGFSample/: .clang-format  CMakeLists.txt
DGFSample/include/: D3D12MeshletRender.h  DGFBVHBuilder.h  DXFramework.h  DXSample.h  DXSampleHelper.h  SimpleCamera.h  Span.h  StepTimer.h  Util.h  Win32Application.h  d3dx12.h  stdafx.h
DGFSample/shaders/: DGFBVHBuildDecode.hlsl  DGFBitScanLaneMeshShader.hlsl  DGFBitScanWaveMeshShader.hlsl  DGFDecompression.hlsl  DGFSerialMeshShader.hlsl  MeshShaderUtil.hlsl  PixelShader.hlsl  RaytracingComputeShader.hlsl
DGFSample/src/: D3D12MeshletRender.cpp  DGFBVHBuilder.cpp  DXFramework.cpp  DXSample.cpp  Main.cpp  SimpleCamera.cpp  Util.cpp  Win32Application.cpp
DGFTester/: CMakeLists.txt  DGFTester.cpp
